--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "grommet": "^2.2.1",
     "grommet-icons": "^4.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
+    "reactstrap": "^6.5.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
