--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
     "reactstrap": "^6.5.0",
-    "styled-components": "^4.1.3"
+    "react-redux": "^5.0.5",
+    "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^4.1.3",
+    "blockstack": "^18.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
