--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,10 @@
 {
-  "short_name": "Feed",
-  "name": "Feed",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "name": "Hello, Blockstack",
+  "start_url": "localhost:3000",
+  "description": "A simple demo of Blockstack Auth",
+  "icons": [{
+    "src": "https://helloblockstack.com/icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
