--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
+    "redux-auth-wrapper": "^2.0.2",
     "styled-components": "^4.1.3",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
