--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.0.4",
     "blockstack": "^18.0.4",
     "bootstrap": "^4.2.1",
+    "draft-js": "^0.10.5",
     "grommet": "^2.2.1",
     "grommet-icons": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -25,10 +26,10 @@
     "react-scripts": "2.1.2",
     "reactstrap": "^6.5.0",
     "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "redux-auth-wrapper": "^2.0.2",
     "styled-components": "^4.1.3",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
