--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-notes.txt
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+/notes
 
 # dependencies
 /node_modules
