--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feed",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@babel/cli": "^7.1.2",
@@ -16,6 +16,7 @@
     "grommet": "^2.2.1",
     "grommet-icons": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "nanoid": "^2.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^5.0.5",
