--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grommet": "^2.2.1",
     "grommet-icons": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "moment": "^2.23.0",
     "nanoid": "^2.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
