--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "2.1.2",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^6.5.0",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
@@ -39,7 +39,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
-    "start:dev": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "eslintConfig": {
     "extends": "react-app"
