--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "^2.1.3",
+    "react-spinners": "^0.5.1",
     "reactstrap": "^6.5.0",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
