--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.6.0",
     "draft-js": "^0.10.5",
+    "emotion": "^10.0.6",
     "grommet": "^2.2.1",
     "grommet-icons": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
