--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
   "devDependencies": {
     "@emotion/core": "^0.13.1",
     "@emotion/styled": "^0.10.6",
+    "@storybook/addon-actions": "^4.1.11",
     "@storybook/react": "^4.1.11",
     "ajv": "^6.7.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "storybook-react-router": "^1.0.2"
   }
 }
