--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nanoid": "^2.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-minimal-pie-chart": "^3.3.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
