--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-emotion": "^10.0.9",
     "babel-polyfill": "^6.26.0",
     "blockstack": "^18.0.4",
     "bootstrap": "^4.2.1",
@@ -30,7 +31,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "react-spinners": "^0.5.1",
     "reactstrap": "^6.5.0",
     "redux": "^3.7.2",
