--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^3.2.0",
     "moment": "^2.23.0",
     "nanoid": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-minimal-pie-chart": "^3.3.0",
