--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": [
     "@babel/preset-env", 
     "@babel/preset-react",
+    "@emotion/babel-preset-css-prop"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
