--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@storybook/react": "^4.1.11",
     "ajv": "^6.7.0",
     "jquery": "^3.3.1",
+    "lorem-ipsum": "^2.0.1",
     "storybook-react-router": "^1.0.2"
   }
 }
