--- a/package.json
+++ b/package.json
@@ -1,71 +1,20 @@
 {
   "name": "feed",
   "version": "0.0.1",
+  "description": "A decentralized social networking utility powered by blockchain technology.",
   "private": true,
-  "dependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@emotion/babel-preset-css-prop": "^10.0.9",
-    "@emotion/core": "^0.13.1",
-    "@emotion/styled": "^0.10.6",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-emotion": "^10.0.9",
-    "babel-polyfill": "^6.26.0",
-    "blockstack": "^18.0.4",
-    "bootstrap": "^4.2.1",
-    "dotenv": "^6.2.0",
-    "dotenv-webpack": "^1.6.0",
-    "draft-js": "^0.10.5",
-    "grommet": "^2.2.1",
-    "grommet-icons": "^4.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "moment": "^2.23.0",
-    "nanoid": "^2.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-minimal-pie-chart": "^3.3.0",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.2.0",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "^2.1.8",
-    "react-spinners": "^0.5.1",
-    "reactstrap": "^6.5.0",
-    "redux": "^3.7.2",
-    "redux-auth-wrapper": "^2.0.2",
-    "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^4.3.0",
-    "redux-thunk": "^2.2.0",
-    "styled-components": "^4.1.3",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
-  },
-  "scripts": {
-    "start": "webpack-dev-server",
-    "storybook": "start-storybook -p 9001 -c ./storybook"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+  "author": "knaut",
+  "license": "ISC",
+  "keywords": [
+    "social",
+    "blockchain"
   ],
+  "dependencies": {},
   "devDependencies": {
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/react": "^4.1.11",
-    "ajv": "^6.7.0",
-    "jquery": "^3.3.1",
-    "lorem-ipsum": "^2.0.1",
-    "storybook-react-router": "^1.0.2"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0"
   }
 }
