added runtime dependencies, react, etc

--- a/package.json
+++ b/package.json
@@ -9,7 +9,22 @@
     "social",
     "blockchain"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.9",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.11",
+    "connected-react-router": "^6.4.0",
+    "grommet": "^2.7.0",
+    "grommet-icons": "^4.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.2.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
