--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@emotion/babel-preset-css-prop": "^10.0.9",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.11",
+    "blockstack": "^19.1.0",
     "connected-react-router": "^6.4.0",
+    "dotenv": "^8.0.0",
+    "draft-js": "^0.10.5",
     "grommet": "^2.7.0",
     "grommet-icons": "^4.2.0",
+    "moment": "^2.24.0",
+    "nanoid": "^2.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-spinners": "^0.5.4",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.1.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.0",
     "redux-thunk": "^2.3.0",
@@ -30,6 +38,15 @@
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0"
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "dotenv-webpack": "^1.7.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "standard": "^12.0.1",
+    "storybook-react-router": "^1.0.5",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
