--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nanoid": "^2.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-minimal-pie-chart": "^4.0.0",
     "react-redux": "^7.0.3",
     "react-spinners": "^0.5.4",
     "reactstrap": "^8.0.0",
@@ -39,20 +40,21 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "babel-loader": "^8.0.6",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lorem-ipsum": "^2.0.2",
+    "react-router": "^5.0.0",
     "standard": "^12.0.1",
     "storybook-react-router": "^1.0.5",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "@storybook/react": "^5.0.11",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11"
+    "webpack-dev-server": "^3.4.1"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
