--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-minimal-pie-chart": "^4.0.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "react-router-redux": "^4.0.8",
     "react-spinners": "^0.5.4",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
@@ -58,6 +59,7 @@
     "webpack-dev-server": "^3.4.1"
   },
   "scripts": {
+    "start": "webpack-dev-server",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   }
