--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/babel-preset-css-prop": "^10.0.9",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.11",
+    "babel-polyfill": "^6.26.0",
     "blockstack": "^19.1.0",
     "connected-react-router": "^6.4.0",
     "dotenv": "^8.0.0",
