added profile loader, deleted unrefactored components; minor bug where freshly loaded profiles dont recognize feed cache

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "graph": "madge -i madge_graph.svg ./src/App.js"
   }
 }
