--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.26.0",
     "blockstack": "^19.1.0",
     "connected-react-router": "^6.4.0",
+    "deepmerge": "^3.2.1",
     "dotenv": "^8.0.0",
     "draft-js": "^0.10.5",
     "grommet": "^2.7.0",
