--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router": "^5.0.0",
     "standard": "^12.0.1",
     "storybook-react-router": "^1.0.5",
+    "webapp-webpack-plugin": "^2.7.1",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
