--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "@emotion/styled": "^10.0.11",
     "babel-polyfill": "^6.26.0",
     "blockstack": "^19.1.0",
+    "chalk": "^2.4.2",
     "connected-react-router": "^6.4.0",
     "deepmerge": "^3.2.1",
     "dotenv": "^8.0.0",
     "draft-js": "^0.10.5",
+    "figlet": "^1.2.3",
     "grommet": "^2.7.0",
     "grommet-icons": "^4.2.0",
+    "koa": "^2.7.0",
+    "koa-logger": "^3.2.0",
+    "koa-static": "^5.0.0",
     "moment": "^2.24.0",
     "nanoid": "^2.0.3",
+    "node-emoji": "^1.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-minimal-pie-chart": "^4.0.0",
@@ -65,6 +71,8 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
+    "build-babel": "babel -d ./server/build ./server -s",
+    "server": "webpack --config webpack.server.prod.js && node ./server/build/server.bundle.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "graph": "madge -i madge_graph.svg ./src/App.js"
