--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "build-babel": "babel -d ./server/build ./server -s",
+    "build-babel": "babel -d ./server_build ./server -s",
     "server": "webpack --config webpack.server.prod.js && node ./server/build/server.bundle.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
