added local manifest and webpack config to copy manifest for blockstack

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.3",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -70,8 +71,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
-    "build-babel": "babel -d ./server_build ./server -s",
+    "build-dev": "webpack --config webpack.dev.js",
+    "build-prod": "webpack --config webpack.prod.js",
+    "build-server": "babel -d ./server_build ./server -s",
     "server": "node ./server_build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
