modified server to resolve for any route automatically

--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "dotenv": "^8.0.0",
     "draft-js": "^0.10.5",
     "figlet": "^1.2.3",
+    "find-root": "^1.1.0",
     "grommet": "^2.7.0",
     "grommet-icons": "^4.2.0",
     "koa": "^2.7.0",
     "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "moment": "^2.24.0",
     "nanoid": "^2.0.3",
