add cors for blockstack browser

--- a/package.json
+++ b/package.json
@@ -10,25 +10,41 @@
     "blockchain"
   ],
   "dependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "@emotion/babel-preset-css-prop": "^10.0.9",
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.11",
+    "@koa/cors": "^3.0.0",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
+    "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "blockstack": "^19.1.0",
     "chalk": "^2.4.2",
     "connected-react-router": "^6.4.0",
+    "copy-webpack-plugin": "^5.0.3",
     "deepmerge": "^3.2.1",
     "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.7.0",
     "draft-js": "^0.10.5",
     "figlet": "^1.2.3",
+    "file-loader": "^3.0.1",
     "find-root": "^1.1.0",
     "grommet": "^2.7.0",
     "grommet-icons": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "koa": "^2.7.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
+    "lorem-ipsum": "^2.0.2",
     "moment": "^2.24.0",
     "nanoid": "^2.0.3",
     "node-emoji": "^1.10.0",
@@ -36,6 +52,7 @@
     "react-dom": "^16.8.6",
     "react-minimal-pie-chart": "^4.0.0",
     "react-redux": "^7.0.3",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
     "react-spinners": "^0.5.4",
@@ -45,25 +62,9 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.2.0",
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.3",
-    "dotenv-webpack": "^1.7.0",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "lorem-ipsum": "^2.0.2",
-    "react-router": "^5.0.0",
     "standard": "^12.0.1",
     "storybook-react-router": "^1.0.5",
+    "styled-components": "^4.2.0",
     "webapp-webpack-plugin": "^2.7.1",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
