--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "koa-sslify": "^4.0.3",
     "koa-static": "^5.0.0",
     "lorem-ipsum": "^2.0.2",
     "moment": "^2.24.0",
