building dev for debugging on dev

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.local.js",
     "build-dev": "webpack --config webpack.dev.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-server": "babel -d ./server_build ./server -s",
