--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "node-emoji": "^1.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-linkify": "^1.0.0-alpha",
     "react-minimal-pie-chart": "^4.0.0",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
